force-app/main/default/objects/ConfiguracoesGerais__c/ConfiguracoesGerais__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Configurações Gerais</label>
</CustomObject>