force-app/main/default/objects/ConfiguracoesGerais__c/fields/CodigoServicoSpot__c.field-meta.xml
<CustomField>
    <fullName>CodigoServicoSpot__c</fullName>
    <description>Código de serviço a ser utilizado na integração de pedidos do SAPIENS, medições com voos SPOT</description>
    <inlineHelpText>Código de serviço a ser utilizado na integração de pedidos do SAPIENS, medições com voos SPOT</inlineHelpText>
    <label>Código de serviço SPOT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>