force-app/main/default/objects/ConfiguracoesGerais__c/fields/DeveloperNamePesquisaContratante__c.field-meta.xml
<CustomField>
    <fullName>DeveloperNamePesquisaContratante__c</fullName>
    <label>DeveloperNamePesquisaContratante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>