force-app/main/default/objects/ConfiguracoesGerais__c/fields/DeveloperNamePesquisaPassageiro__c.field-meta.xml
<CustomField>
    <fullName>DeveloperNamePesquisaPassageiro__c</fullName>
    <label>DeveloperNamePesquisaPassageiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>