force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdChatterGrupoComercial__c.field-meta.xml
<CustomField>
    <fullName>IdChatterGrupoComercial__c</fullName>
    <label>Id Chatter Grupo Comercial</label>
    <length>18</length>
    <type>Text</type>
</CustomField>