force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdComunidade__c.field-meta.xml
<CustomField>
    <fullName>IdComunidade__c</fullName>
    <description>Utilizado em Flow de Pesquisa</description>
    <label>Id da Comunidade</label>
    <length>18</length>
    <type>Text</type>
</CustomField>