force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdentificadorCarimboBancarioPadrao__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorCarimboBancarioPadrao__c</fullName>
    <description>Identificador do carimbo padrão (Valor SAPIENS) a ser utilizado na integração de faturamento</description>
    <inlineHelpText>Identificador do carimbo padrão (Valor SAPIENS) a ser utilizado na integração de faturamento</inlineHelpText>
    <label>Identificador do carimbo bancário padrão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>