force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdGrupoCoordenacaoJpa__c.field-meta.xml
<CustomField>
    <fullName>IdGrupoCoordenacaoJpa__c</fullName>
    <description>Id do grupo público coordenação Jacarepaguá</description>
    <label>IdGrupoCoordenacaoJpa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>