force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdGrupoCoordenacaoMacae__c.field-meta.xml
<CustomField>
    <fullName>IdGrupoCoordenacaoMacae__c</fullName>
    <description>Id do grupo público de Coordenação Macaé</description>
    <label>IdGrupoCoordenacaoMacae</label>
    <length>255</length>
    <type>Text</type>
</CustomField>