force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdGrupoCoordenacaoNavegantes__c.field-meta.xml
<CustomField>
    <fullName>IdGrupoCoordenacaoNavegantes__c</fullName>
    <defaultValue>&apos;3D00G3i000000f39M&apos;</defaultValue>
    <label>IdGrupoCoordenacaoNavegantes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>