force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdGrupoOperacoesJpa__c.field-meta.xml
<CustomField>
    <fullName>IdGrupoOperacoesJpa__c</fullName>
    <description>Id de grupo público de Operações de Jacarepaguá</description>
    <label>IdGrupoOperacoesJpa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>