force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdGrupoOperacoesMacae__c.field-meta.xml
<CustomField>
    <fullName>IdGrupoOperacoesMacae__c</fullName>
    <label>IdGrupoOperacoesMacae</label>
    <length>255</length>
    <type>Text</type>
</CustomField>