force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdGrupoOperacoesNavegantes__c.field-meta.xml
<CustomField>
    <fullName>IdGrupoOperacoesNavegantes__c</fullName>
    <defaultValue>&apos;3D00G3i000000f3NP&apos;</defaultValue>
    <label>IdGrupoOperacoesNavegantes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>