force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdItemContratoTipoAeronave__c.field-meta.xml
<CustomField>
    <fullName>IdItemContratoTipoAeronave__c</fullName>
    <description>Id do tipo de registro aeronave do objeto item do contrato</description>
    <inlineHelpText>Id do tipo de registro aeronave do objeto item do contrato</inlineHelpText>
    <label>Id item do contrato tipo aeronave</label>
    <length>20</length>
    <type>Text</type>
</CustomField>