force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdItemContratoTipoProduto__c.field-meta.xml
<CustomField>
    <fullName>IdItemContratoTipoProduto__c</fullName>
    <description>Id do tipo de registro produto do objeto item do contrato</description>
    <inlineHelpText>Id do tipo de registro produto do objeto item do contrato</inlineHelpText>
    <label>Id item do contrato tipo produto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>