force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdLocalJacarepagua__c.field-meta.xml
<CustomField>
    <fullName>IdLocalJacarepagua__c</fullName>
    <description>Id Base Jacarepagua</description>
    <label>IdLocalJacarepaguá</label>
    <length>30</length>
    <type>Text</type>
</CustomField>