force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdLocalMacae__c.field-meta.xml
<CustomField>
    <fullName>IdLocalMacae__c</fullName>
    <description>Id Base Macaé</description>
    <label>IdLocalMacae</label>
    <length>20</length>
    <type>Text</type>
</CustomField>