force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdLocalNavegantes__c.field-meta.xml
<CustomField>
    <fullName>IdLocalNavegantes__c</fullName>
    <defaultValue>&quot;a0O3i000000TL74EAG&quot;</defaultValue>
    <label>IdLocalNavegantes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>