force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdNotificacaoPersonalizada__c.field-meta.xml
<CustomField>
    <fullName>IdNotificacaoPersonalizada__c</fullName>
    <description>Id da notiticação desktop e mobile</description>
    <label>IdNotificacaoPersonalizada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>