force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilAdministrador__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilAdministrador__c</fullName>
    <description>Id do Perfil de Adminstrador do Sistema (ProfileId)</description>
    <inlineHelpText>Id do Perfil de Administrador do Sistema (ProfileId)</inlineHelpText>
    <label>IdPerfilAdministrador</label>
    <length>20</length>
    <type>Text</type>
</CustomField>