force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilComercial__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilComercial__c</fullName>
    <description>Id do perfil do Comercial</description>
    <inlineHelpText>Id do Perfil do Comercial</inlineHelpText>
    <label>Id Perfil Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>