force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilComunidade15Caracteres__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilComunidade15Caracteres__c</fullName>
    <description>Configuração para armazenar os 15 caracteres do Id do Perfil da Comunidade para ser usado no Process Builder e comparado com $Profile.Id</description>
    <inlineHelpText>Configuração para armazenar os 15 caracteres do Id do Perfil da Comunidade para ser usado no Process Builder e comparado com $Profile.Id</inlineHelpText>
    <label>Id Perfil Comunidade 15 caracteres</label>
    <length>15</length>
    <type>Text</type>
</CustomField>