force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilComunidade__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilComunidade__c</fullName>
    <label>Id do Perfil de Comunidade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>