force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilCoordenacao__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilCoordenacao__c</fullName>
    <label>Id do Perfil da Coordenação</label>
    <length>18</length>
    <type>Text</type>
</CustomField>