force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilIntegracaoStar__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilIntegracaoStar__c</fullName>
    <label>Id do Perfil de Integração Star</label>
    <length>20</length>
    <type>Text</type>
</CustomField>