force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPerfilOperacoes__c.field-meta.xml
<CustomField>
    <fullName>IdPerfilOperacoes__c</fullName>
    <label>Id do Perfil de Operações</label>
    <length>18</length>
    <type>Text</type>
</CustomField>