force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPesquisaContratante__c.field-meta.xml
<CustomField>
    <fullName>IdPesquisaContratante__c</fullName>
    <label>Id Pesquisa Contratante</label>
    <length>18</length>
    <type>Text</type>
</CustomField>