force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdPesquisaPassageiro__c.field-meta.xml
<CustomField>
    <fullName>IdPesquisaPassageiro__c</fullName>
    <label>Id Pesquisa Passageiro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>