force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdRemetenteCartaoEmbarque__c.field-meta.xml
<CustomField>
    <fullName>IdRemetenteCartaoEmbarque__c</fullName>
    <label>Id Remetente Cartão de Embarque</label>
    <length>20</length>
    <type>Text</type>
</CustomField>