force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdRemetenteInteressados__c.field-meta.xml
<CustomField>
    <fullName>IdRemetenteInteressados__c</fullName>
    <description>Id do remetente do e-mail que será enviado aos interessados</description>
    <inlineHelpText>Id do remetente do e-mail que será enviado aos interessados</inlineHelpText>
    <label>Id Remetente de Interessados</label>
    <length>20</length>
    <type>Text</type>
</CustomField>