force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdRemetentePassageiroRemovido__c.field-meta.xml
<CustomField>
    <fullName>IdRemetentePassageiroRemovido__c</fullName>
    <description>Possui o id do remetente que será utilizado no e-mail para informar que o passageiro foi removido do voo</description>
    <inlineHelpText>Possui o id do remetente que será utilizado no e-mail para informar que o passageiro foi removido do voo</inlineHelpText>
    <label>Id Remetente Passageiro Removido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>