force-app/main/default/objects/ConfiguracoesGerais__c/fields/idRemetentePesquisaSatisfacao__c.field-meta.xml
<CustomField>
    <fullName>idRemetentePesquisaSatisfacao__c</fullName>
    <description>Id do Org Wide Email Address (Email utilizado como remetente das pesquisas de satisfação</description>
    <inlineHelpText>Id do Org Wide Email Address (Email utilizado como remetente das pesquisas de satisfação</inlineHelpText>
    <label>idRemetentePesquisaSatisfacao</label>
    <length>20</length>
    <type>Text</type>
</CustomField>