force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplateEmailCalculo__c.field-meta.xml
<CustomField>
    <fullName>IdTemplateEmailCalculo__c</fullName>
    <description>Id do template de email do cálculo de missão</description>
    <inlineHelpText>Id do template de email do cálculo de missão</inlineHelpText>
    <label>Id do Template de Email do Cálculo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>