force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplateEmailcalculoInvalido__c.field-meta.xml
<CustomField>
    <fullName>IdTemplateEmailcalculoInvalido__c</fullName>
    <description>Id do template de email de resposta a consulta do lead com cálculo inválido</description>
    <inlineHelpText>Id do template de email de resposta a consulta do lead com cálculo inválido</inlineHelpText>
    <label>Id template de e-mail cálculo inválido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>