force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplateEmailCartaoEmbarque__c.field-meta.xml
<CustomField>
    <fullName>IdTemplateEmailCartaoEmbarque__c</fullName>
    <description>Id referente ao e-mail de cartão de embarque enviado ao passageiro do voo</description>
    <inlineHelpText>Id referente ao e-mail de cartão de embarque enviado ao passageiro do voo</inlineHelpText>
    <label>Id Template de Email Cartão de Embarque</label>
    <length>18</length>
    <type>Text</type>
</CustomField>