force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplateEmailLogIntegracaoErro__c.field-meta.xml
<CustomField>
    <fullName>IdTemplateEmailLogIntegracaoErro__c</fullName>
    <description>Id do Template de Email de Erro no Log da Integração</description>
    <inlineHelpText>Id do Template de Email de Erro no Log da Integração</inlineHelpText>
    <label>Id Template Email Log Integração Erro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>