force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplateEmailPassageiroRemovido__c.field-meta.xml
<CustomField>
    <fullName>IdTemplateEmailPassageiroRemovido__c</fullName>
    <label>Id Template de Email Passageiro Removido</label>
    <length>18</length>
    <type>Text</type>
</CustomField>