force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplateEmailPesquisaPassageiro__c.field-meta.xml
<CustomField>
    <fullName>IdTemplateEmailPesquisaPassageiro__c</fullName>
    <description>Id do template de email da Pesquisa de Satisfação do Passageiro</description>
    <inlineHelpText>Id do template de email da Pesquisa de Satisfação do Passageiro</inlineHelpText>
    <label>Id Template Email Pesquisa Passageiro</label>
    <length>25</length>
    <type>Text</type>
</CustomField>