force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTemplatePesquisaContratante__c.field-meta.xml
<CustomField>
    <fullName>IdTemplatePesquisaContratante__c</fullName>
    <description>Id da Pesquisa de Satisfação do Contratante</description>
    <inlineHelpText>Id da Pesquisa de Satisfação do Contratante</inlineHelpText>
    <label>IdTemplatePesquisa Contratante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>