force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTipoRegistroContratante__c.field-meta.xml
<CustomField>
    <fullName>IdTipoRegistroContratante__c</fullName>
    <description>Armazena o Id do tipo de registro contratante do contato</description>
    <inlineHelpText>Armazena o Id do tipo de registro contratante do contato</inlineHelpText>
    <label>Id do Tipo de Registro Contratante</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>