force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTipoRegistroHoraCorte__c.field-meta.xml
<CustomField>
    <fullName>IdTipoRegistroHoraCorte__c</fullName>
    <description>Id tipo de registro de item de medição Hora de Corte para ser usado em flow de exclusão de item</description>
    <label>IdTipoRegistroHoraCorte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>