force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTipoRegistroHoraVoada__c.field-meta.xml
<CustomField>
    <fullName>IdTipoRegistroHoraVoada__c</fullName>
    <description>Id do tipo de registro item de medição hora voada para ser usado no Flow de exclusão de item</description>
    <label>IdTipoRegistroHoraVoada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>