force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTipoRegistroInteressadoEditavel__c.field-meta.xml
<CustomField>
    <fullName>IdTipoRegistroInteressadoEditavel__c</fullName>
    <label>Id Tipo de Registro Interessado Editável</label>
    <length>20</length>
    <type>Text</type>
</CustomField>