force-app/main/default/objects/ConfiguracoesGerais__c/fields/IdTipoRegistroLocalPadrao__c.field-meta.xml
<CustomField>
    <fullName>IdTipoRegistroLocalPadrao__c</fullName>
    <description>Armazena o id do tipo de registro padrão de local para filtragem em query</description>
    <inlineHelpText>Armazena o id do tipo de registro padrão de local para filtragem em query</inlineHelpText>
    <label>Id tipo de registro local padrão</label>
    <length>50</length>
    <type>Text</type>
</CustomField>