force-app/main/default/objects/ConfiguracoesGerais__c/fields/PercentualAceitoRecalculaMissao__c.field-meta.xml
<CustomField>
    <fullName>PercentualAceitoRecalculaMissao__c</fullName>
    <description>Ao recalcular a missão, se a diferença entre o novo tempo de voo e o anterior for superior a este percentual o cliente deve ser notificado</description>
    <inlineHelpText>Ao recalcular a missão, se a diferença entre o novo tempo de voo e o anterior for superior a este percentual o cliente deve ser notificado</inlineHelpText>
    <label>PercentualAceitoRecalculaMissao</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>