force-app/main/default/objects/ConfiguracoesGerais__c/fields/PrefixoPadraoCalculoMissao__c.field-meta.xml
<CustomField>
    <fullName>PrefixoPadraoCalculoMissao__c</fullName>
    <description>Prefixo padrão utilizado para cálculo de missão do lead vindo do site externo</description>
    <inlineHelpText>Prefixo padrão utilizado para cálculo de missão do lead vindo do site externo</inlineHelpText>
    <label>Prefixo Padrão Cálculo de Missão</label>
    <length>20</length>
    <type>Text</type>
</CustomField>