force-app/main/default/objects/ConfiguracoesGerais__c/fields/Teste__c.field-meta.xml
<CustomField>
    <fullName>Teste__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teste</label>
    <type>Checkbox</type>
</CustomField>