force-app/main/default/objects/ConfiguracoesGerais__c/fields/URL_Pesquisa_Passageiro__c.field-meta.xml
<CustomField>
    <fullName>URL_Pesquisa_Passageiro__c</fullName>
    <description>Link para Pesquisa de Satisfação do Passageiro</description>
    <inlineHelpText>Link para Pesquisa de Satisfação do Passageiro</inlineHelpText>
    <label>URL Pesquisa Passageiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>