force-app/main/default/objects/ConfiguracoesGerais__c/fields/URLComunidade__c.field-meta.xml
<CustomField>
    <fullName>URLComunidade__c</fullName>
    <description>Url da comunidade</description>
    <inlineHelpText>Url da comunidade</inlineHelpText>
    <label>URL Comunidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>